# barbershop-bot

./: .env  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: config.py  run.py
app/admin/: api_auth.py  router.py
app/api/: deps.py  main.py
app/api/routers/: make.py
app/bot/: dispatcher.py  make_client.py  manager.py  sender.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_init.py  0002_master_description_experience.py  0003_master_photo_path.py  0004_bot_settings.py
app/services/: auth.py  booking.py  media.py
