[tool.poetry]
name = "barbershop-telegram-backend"
version = "0.1.0"
description = "Async backend for Telegram barbershop bot integrated with Make"
authors = ["you <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = "^0.115.6"
uvicorn = { version = "^0.27.1", extras = ["standard"] }
aiogram = "^3.4.1"
SQLAlchemy = { version = "^2.0.25", extras = ["asyncio"] }
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
ruff = "^0.1.15"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
